--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ main {
   justify-content: space-around;
   align-items: center;
   height: 100vh;
+  max-height: 100vh;
   background-color: #e3fef7;
 }
 #heading-section {
