--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@
   font-family: sans-serif;
   color: var(--text-color);
 }
+body {
+  height: 100vh;
+  max-height: 100vh;
+}
 span {
   background-color: var(--text-color);
 }
@@ -27,8 +31,7 @@ main {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100%;
   background-color: #e3fef7;
 }
 #heading-section {
