--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ main {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  min-height: 100vh;
   background-color: #e3fef7;
 }
 #heading-section {
